retirer le slash du css

--- a/MonArt.html
+++ b/MonArt.html
@@ -15,12 +15,12 @@
     <header class="header">
         <nav>
             <h1>
-                <a href="/index.html">Imran Vision</a>
+                <a href="index.html">Imran Vision</a>
             </h1>
             <ul>
-                <li><a href="/index.html">Accueil</a></li>
-                <li><a class="active" href="/MonArt.html">Mon Art</a></li>
-                <li><a href="/contact.html">Nous Contactez</a></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a class="active" href="MonArt.html">Mon Art</a></li>
+                <li><a href="contact.html">Nous Contactez</a></li>
             </ul>
         </nav>
     </header>
@@ -53,11 +53,11 @@
 
         <section class="header2">
             <h1>
-                <a href="/index.html" class="iv">Imran Vision</a>
+                <a href="index.html" class="iv">Imran Vision</a>
             </h1>
         </section>
 
-<!--
+
     <section class="humain">
             <img class="hum3" src="img/photofoot3.jpeg" alt="foot3">
             <img class="hum3" src="img/photofoot4.jpeg" alt="foot4">
@@ -68,7 +68,7 @@
             <img class="hum1" src="img/photofoot1.jpeg" alt="foot1">
             <img class="hum2" src="img/photofoot2.jpeg" alt="foot2">
         </section>    
--->
+
     </section>
     <footer>
         <p>copyright &#169; - IV - 2025</p>
