--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,12 @@
     <header class="header">
         <nav>
             <h1>
-                <a href="/index.html">Imran Vision</a>
+                <a href="index.html">Imran Vision</a>
             </h1>
             <ul>
-                <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/MonArt.html">Mon Art</a></li>
-                <li><a class="active" href="/contact.html">Nous Contactez</a></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="MonArt.html">Mon Art</a></li>
+                <li><a class="active" href="contact.html">Nous Contactez</a></li>
             </ul>
         </nav>
     </header>
