--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header class="header">
         <nav>
             <h1>
-                <a href="/index.html">Imran Vision</a>
+                <a href="index.html">Imran Vision</a>
             </h1>
             <ul>
-                <li><a class="active" href="/index.html">Accueil</a></li>
-                <li><a href="/MonArt.html">Mon Art</a></li>
-                <li><a href="/contact.html">Nous Contactez</a></li>
+                <li><a class="active" href="index.html">Accueil</a></li>
+                <li><a href="MonArt.html">Mon Art</a></li>
+                <li><a href="contact.html">Nous Contactez</a></li>
             </ul>
         </nav>
     </header>
@@ -56,7 +56,7 @@
         <div class="container">
             <h2>Faire une demande maintenant</h2>
             <p>Contactez-Nous sur notre Instagrame, en attendant la finalisations de notre site WEB.</p>
-        <a href="./contact.html" class="btn btn-dark my-20">Faire une demande</a>
+        <a href=".contact.html" class="btn btn-dark my-20">Faire une demande</a>
         </div>
     </section>
     <footer>
