retirer le slash du css

--- a/MonArt.html
+++ b/MonArt.html
@@ -29,36 +29,30 @@
                 <div class="pay2">
                     <img src="img/paysage1.jpeg" alt="paysage1"> 
                 </div>
-
                 <div class="pay2">
                     <img src="img/paysage2.jpeg" alt="paysage2">
                 </div>
-
-                <div class="pay2"></div>
+                <div class="pay2">
                     <img src="img/paysage3.jpeg" alt="paysage3">
                 </div>
-
-                <div class="pay2"></div>
+                <div class="pay2">
                     <img src="img/paysage4.jpeg" alt="paysage4">
                 </div>
-
-                <div class="pay2"></div>
+                <div class="pay2">
                     <img src="img/paysage5.jpeg" alt="paysage5">
                 </div>
-
-                <div class="pay2"></div>
+                <div class="pay2">
                     <img src="img/paysage6.jpeg" alt="paysage6">
                 </div>
+        </div>
+            <section class="header2">
+                <h1>
+                    <a href="index.html" class="iv">Imran Vision</a>
+                </h1>
+            </section>
 
 
-        <section class="header2">
-            <h1>
-                <a href="index.html" class="iv">Imran Vision</a>
-            </h1>
-        </section>
-
-
-    <section class="humain">
+        <section class="humain">
             <img class="hum3" src="img/photofoot3.jpeg" alt="foot3">
             <img class="hum3" src="img/photofoot4.jpeg" alt="foot4">
             <img class="hum3" src="img/photofoot5.jpeg" alt="foot5">
@@ -68,7 +62,6 @@
             <img class="hum1" src="img/photofoot1.jpeg" alt="foot1">
             <img class="hum2" src="img/photofoot2.jpeg" alt="foot2">
         </section>    
-
     </section>
     <footer>
         <p>copyright &#169; - IV - 2025</p>
